@@ -2,6 +2,8 @@
 	  non-blocking.
 	- ptytty::get no longer makes the pty a controlling terminal
 	  when using posix_openpt.
+	- remove support for utmpx ut_session extension, it serves no
+	  purpose.
 	- remove support for writing lastlog when the lastlog file is a
 	  directory, no system is known to require this code.
 	- do not clear ut_user in utmpx logout records because
